[project]
name = "atscm"
version = "0.2.1"

[tool.poetry]
name = "atscm"
version = "0.2.1"
description = "AtCoderに提出した最新のACコードをリモートリポジトリにプッシュして管理します。"
authors = ["tawainfer <tawainfer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
gitpython = "^3.1.43"
pyyaml = "^6.0.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
